feat(모달 조회시 뱃지와 온도 조회 메커니즘 추가): 모달 조회시 뱃지와 온도 조회 메커니즘 추가 DP-353